argo-cd/clusters/lgsk8sp1/tooling/argo/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argo-events
  namespace: argo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - 'argo-events.diegoluisi.eti.br'
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argo-workflows
  namespace: argo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - 'argo-workflows.diegoluisi.eti.br'
