argo-cd/clusters/lgsk8sp1/tooling/argo/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-events
spec:
  gateways:
    - argo-events
  hosts:
    - argo-events.diegoluisi.eti.br
  http:
    - route:
      - destination:
          host: github-eventsource-svc
          port:
            number: 12000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-workflows
spec:
  gateways:
    - istio-system/istio-gateway
  hosts:
    - argo-workflows.diegoluisi.eti.br
  http:
    - route:
      - destination:
          host: argo-server
          port:
            number: 2746
